# cli

./: README.md  data.json  pyproject.toml
.github/workflows/: test.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_be80334b69d6e2b7___main___py.html  z_be80334b69d6e2b7_bundle_py.html  z_be80334b69d6e2b7_cli_py.html
src/tez/: __init__.py  __main__.py  cli.py
tests/: test_bundle.py  test_cli.py
