[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tez"]

[project]
name = "tez-cli"
version = "0.1.0"
description = "Reference CLI for the Tezit Protocol"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
tez = "tez.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["src/tez"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "if __name__ == .__main__.",
]
